--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,10 @@ install:
 
 before_script:
   - conda install --yes -c r r
-  - conda install --yes -c https://conda.binstar.org/cgat bioconductor-biobase bioconductor-s4vectors bioconductor-godb
+  - conda install --yes -c https://conda.binstar.org/cgat bioconductor-biobase bioconductor-s4vectors bioconductor-godb bioconductor-genefilter
   - R --vanilla < R-combat.R
 
 script:
   - python combat.py
   - python test.py
+
