--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
 
 before_script:
   - conda install --yes -c r r
-  - conda install --yes --channel https://conda.binstar.org/asmeurer r-survival
+  - conda install --yes --channel https://conda.binstar.org/r r-survival
   - conda install --yes -c https://conda.binstar.org/cgat bioconductor-biobase bioconductor-s4vectors bioconductor-godb bioconductor-genefilter
   - R --vanilla < R-combat.R
 
