add r-survival to base R installation command

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ install:
   - conda install --yes --file requirements.txt
 
 before_script:
-  - conda install --yes -c r r
-  - conda install --yes --channel https://conda.binstar.org/r r-survival
+  - conda install --yes -c r r r-survival
   - conda install --yes -c https://conda.binstar.org/cgat bioconductor-biobase bioconductor-s4vectors bioconductor-godb bioconductor-genefilter
   - R --vanilla < R-combat.R
 
