--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ install:
   - conda install --yes --file requirements.txt
 
 before_script:
-  - conda install --yes -c r r r-survival
-  - conda install --yes -c https://conda.binstar.org/cgat cgat-bioconductor-deps bioconductor-biobase bioconductor-s4vectors bioconductor-godb bioconductor-genefilter
+  - conda install --yes -c r r
+  - conda install --yes -c https://conda.binstar.org/cgat cgat-r-deps cgat-bioconductor-deps bioconductor-biobase bioconductor-s4vectors bioconductor-godb bioconductor-genefilter
   - R --vanilla < R-combat.R
 
 script:
