don't pre-install bioconductor

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ install:
 
 before_script:
   - conda install --yes -c r r r-rcolorbrewer
-  - conda install --yes -c https://conda.binstar.org/cgat cgat-r-deps cgat-bioconductor-deps bioconductor-biobase bioconductor-s4vectors bioconductor-godb bioconductor-genefilter
+  - conda install --yes rpy2
+#  - conda install --yes -c https://conda.binstar.org/cgat cgat-r-deps cgat-bioconductor-deps bioconductor-biobase bioconductor-s4vectors bioconductor-godb bioconductor-genefilter
   - R --vanilla < R-combat.R
 
 script:
