--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,11 @@ install:
   - source activate testenv
   - conda install --yes --file requirements.txt
 
-before_script:
-  - conda install --yes -c r r r-rcolorbrewer
+#before_script:
+#  - conda install --yes -c r r r-rcolorbrewer
 #  - conda install --yes rpy2
 #  - conda install --yes -c https://conda.binstar.org/cgat cgat-r-deps cgat-bioconductor-deps bioconductor-biobase bioconductor-s4vectors bioconductor-godb bioconductor-genefilter
-  - R --vanilla < R-combat.R
+#  - R --vanilla < R-combat.R
 
 script:
   - python combat.py
